# AI-Horde

./: .dockerignore  .env_template  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FAQ.md  README.md  README_KoboldAIHorde.md  README_StableHorde.md  README_docker.md  README_integration.md  README_return_codes.md  api_screenshot.png.license  bridge.py  cliRequestsData_Alchemy_template.py  cliRequestsData_Dream_template.py  cliRequestsData_Scribe_template.py  cliRequestsData_template.py  cli_logger.py  cli_request.py  cli_request_alchemy.py  cli_request_dream.py  cli_request_scribe.py  cli_requirements.txt  clientData.py  clientData_template.py  docker-compose.yaml  gui_select.png.license  index.md  index_kobold.md  index_stable.md  logger.py  prune_stale_images.py  pyproject copy.toml  pyproject.toml  requirements.dev.txt  (+6 more)
.github/: FUNDING.yml
.github/actions/setup-test-python/: action.yml
.github/actions/start-test-stack/: action.yml
.github/workflows/: docker-publish.yml  maintests.yml  prtests.yml  trusted-fork-integration.yml
app/: __init__.py  flask.py  routes.py
app/apis/: apiv1.py  v2.py
app/classes/: maintenance.py
app/templates/: terms_of_service.html
assets/: logo_nlnet.svg.license  stability.ai.png.license
ci/garage/: garage.toml
docker/postgres/: dockerfile
docker/postgres/init-db/: 002-pg-cron.sh  003-main.sql
docs/: README.md
docs/explanation/: kudos_accounting.md
docs/how-to/: kudos_ledger_operations.md
docs/reference/: kudos_accounting.md
horde/: __init__.py  argparser.py  bridge_reference.py  config.py  consts.py  conversions.py  countermeasures.py  detection.py  discord.py  enums.py  exceptions.py  flask.py  horde.db  horde_redis.py  image.py  limiter.py  logger.py  metrics.py  model_reference.py  ops.py  patreon.py  r2.py  redis.py  redis_ctrl.py  routes.py  sandbox.py  stripe_subs.py  suspicions.py  switch.py  telemetry.py  threads.py  utils.py  validation.py  vars.py
horde/apis/: __init__.py  apiv1.py  apiv2.py  exceptions.py  limiter_api.py  request_utils.py  v1.py  v2.py
horde/apis/models/: __init__.py  kobold_v2.py  stable_v2.py  v2.py
horde/apis/v1/: kobold_v1.py  stable_v1.py  v1.py
horde/apis/v2/: __init__.py  base.py  kobold.py  kobold_styles.py  stable.py  stable_styles.py  styles.py  v2.py
horde/classes/: __init__.py  database.py  maintenance.py  server_classes.py
horde/classes/base/: __init__.py  database.py  db_utils.py  detection.py  indexes.py  kudos.py  news.py  processing_generation.py  settings.py  stats.py  style.py  team.py  threads.py  user.py  waiting_prompt.py  worker.py
horde/classes/database/: __init__.py  classes.py
horde/classes/kobold/: __init__.py  genstats.py  (+4 more)
horde/data/: news.json  news.json.license
horde/database/: __init__.py  classes.py  functions.py  kudos_counters.py  kudos_db.py  kudos_ledger.py  kudos_legacy_projection.py  kudos_reconciliation.py  kudos_reservations.py  text_functions.py  threads.py
horde/templates/: bad_username.html  document.html  error.html  ipaddr_ban_error.html  master.html  privacy_policy.html  recaptcha_error.html  register.html  sponsors.html  terms_of_service.html  transfer_kudos.html
img_stable/: 1.jpg.license
kudos/: example.html  example.js  kudos_standalone.js
sql_statements/: 4.0.0.txt  4.10.1.txt  4.11.0.txt  4.12.0.txt  4.13.0.txt  4.15.0.txt  4.15.7.txt  4.16.0.txt  4.2.0.txt  4.2.0.txt.license  4.22.0.txt  4.23.0.txt  4.25.0.txt  4.27.0.txt  4.29.0.txt  4.3.1.txt  4.30.0.txt  4.32.0.txt  4.34.0.txt  4.35.1.txt  4.37.1.txt  4.41.0.txt  4.43.0.txt  4.44.0.txt  4.47.0.txt  4.48.0.txt  4.49.0.txt  4.50.0.txt  4.6.1.txt  4.6.5.txt  4.6.7.txt  4.9.0.txt  5.0.3.txt  5.0.4-post.txt  5.0.4.txt  5.0.4.txt.license  5.1.0.txt  README.md  queries.sql
sql_statements/cron/: schedule_cron_job.sql
sql_statements/meta_statistics/: meta_statistics.sql
sql_statements/stored_procedures/: compile_imagegen_stats_models.sql  compile_imagegen_stats_totals.sql  compile_textgen_stats_models.sql  compile_textgen_stats_totals.sql
templates/: index.j2  master.html  privacy_policy.html  register.html  transfer_kudos.html
tests/: bootstrap_garage.sh  conftest.py  dependency_runtime.py  docker-compose.yml  fixture_types.py  run_with_test_stack.sh  test.py  test_alchemy.py  test_image.py  test_image_extra_sources.py  test_text.py  test_utils.py
tests/garage/: ensure_test_credentials.sh  garage.toml
tests/integration/: bootstrap_test_user.py  conftest.py  test_alchemy.py  test_image.py  test_image_extra_sources.py  test_image_styles.py  test_kudos_aesthetics.py  test_kudos_endpoints.py  test_kudos_request_activation.py  test_maintenance_threads.py  test_malformed_requests.py  test_statistics.py  test_text.py  test_user_ops.py  test_validation_boundaries.py  test_worker_ops.py
tests/stress/: README.md  analyze_hot_user_convoy.py  analyze_queue_pressure.py  check_attribution_results.py  check_smoke_results.py  gen_api_keys.py  locust.conf.example  locustfile.py  locustfile_attribution.py  locustfile_hot_user_convoy.py  locustfile_queue_pressure.py  locustfile_shaped.py  pg_prober.py
tests/unit/: conftest.py  test_consts.py  test_countermeasures.py  test_database_functions.py  test_dependency_runtime.py  test_exceptions.py  test_imports.py  test_kobold_text_wp.py  test_kudos_balance.py  test_kudos_counter_fold.py  test_kudos_counters.py  test_kudos_image_cancel.py  test_kudos_interrogation.py  test_kudos_invariants.py  test_kudos_ledger.py  test_kudos_mode_equivalence.py  test_kudos_monthly.py  test_kudos_pricing.py  test_kudos_safety.py  test_kudos_settlement.py  test_kudos_uptime.py  test_procgen_model_assignment.py  test_r2.py  test_stripe_members.py  test_telemetry.py  test_user_roles.py  test_utils.py  test_worker_can_generate.py  test_worker_model_cache.py  test_worker_softprompt_cache.py  test_worker_speed_materialization.py  test_wp_activate_deadlock.py  test_wp_has_valid_workers.py  test_wp_status_consistency.py
tools/: convert_kudos_checkpoint.py  kudos_ledger_admin.py
(+35 files in other folders)
