[project]
name = "AI Horde"
version = "4.30.0"
description = "A Crowdsourced Generative AI cluster for everyone."
authors = [
    {name = "db0", email = "mail@dbzer0.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "loguru",
    "Flask",
    "flask-restx",
    "waitress",
    "flask-dance",
    "bleach",
    "redis",
    "pillow",
    "SQLAlchemy",
    "boto3",
    "semver",
    "torch",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
]

[project.urls]
"Homepage" = "https://aihorde.net"
"Bug Tracker" = "https://github.com/Haidra-Org/AI-Horde"

[tool.ruff]
line-length = 140
select = [
  "A",
  "I",
  "E",
  "W",
  "F",
  "UP",
  "YTT",
  #"B",
  #"C4",
  "PIE",
  #"RET",
  #"SIM",
  "COM",
  # "D",
  #"ANN"
  ]
ignore = [
  "ANN101",
  "ANN102",
  # Ignore D rules for non-google docstring standard
  "D203",
  "D204",
  "D213",
  "D215",
  "D400",
  "D404",
  "D406",
  "D407",
  "D408",
  "D409",
  "D413",]


[tool.black]
line-length = 140
include = '\.pyi?$'

[tool.ruff.per-file-ignores]
"horde/sandbox.py" = ["F401"]
"server.py" = ["E402"]
